--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: ruby
 rvm:
   - 2.6.3
-  - 1.9.3
-  - jruby-19mode
-  - rbx-2
-
-script: — bundle install — jobs=3 — retry=3
-  — bundle exec rake db:create
-  — bundle exec rake db:migrate
-  — bundle exec rspec
+install: bundle install
+services:
+  - postgresql
+script:
+  - bundle exec rake db:migrate:reset RAILS_ENV=test
+  - bundle exec rspec
