--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: ruby
 rvm:
   - 2.6.3
-install: bundle install
+install:
+  - bundle install
+  - yarn install
+  - rails webpacker:install
 services:
   - postgresql
 script:
