--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ services:
 script:
   - bundle exec rake db:migrate:reset RAILS_ENV=test
   - bundle exec rspec
-  - yarn test
+  - yarn
   - RAILS_ENV=development ./bin/webpack-dev-server
