--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,7 @@ services:
   - postgresql
 
 script:
+  - bundle exec rake db:migrate:reset RAILS_ENV=test
   - bundle exec rspec
+  - yarn - test
+  - RAILS_ENV=development ./bin/webpack-dev-server
