--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
-    "test": "test --passWithNoTests"
+    "test": "test --passWithNoTests",
+    "postinstall": "npm rebuild node-sass"
   }
 }
