--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "^4.2.2",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
@@ -16,8 +16,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
-    "test": "test --passWithNoTests",
-    "postinstall": "cd ./frontend && yarn && yarn run webpack --config ./webpack.config.js"
+    "test": "test --passWithNoTests"
   },
   "engines": {
     "yarn": "1.x"
