--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
-    "test": "test --passWithNoTests"
+    "test": "test --passWithNoTests",
+    "start": "node src/index.js",
+    "build": "webpack -p --progress",
+    "start": "webpack-dev-server"
   },
   "engines": {
-    "yarn": "1.x"
-  }
+    "yarn": "1.x",
+    "node": "12.13.x"
+  },
+  "heroku-run-build-script": true
 }
