--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
-    "bootstrap-datetimepicker": "^0.0.7",
     "datetimepicker": "^0.1.39",
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "version": "0.1.0",
   "devDependencies": {
