--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
+    "bulma": "^0.8.0",
     "datetimepicker": "^0.1.39",
+    "expose-loader": "^0.7.5",
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
+    "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
   },
   "version": "0.1.0",
