--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "4.4.1",
     "bulma": "^0.8.0",
     "datetimepicker": "^0.1.39",
     "expose-loader": "^0.7.5",
