--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ services:
   - postgresql
 
 script:
-  - bundle exec rake db:migrate:reset RAILS_ENV=test
+  - bundle exec rake db:migrate:reset RAILS_ENV=test db:seed
   - bundle exec rspec
