--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-gyp": "^6.1.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
+    "select2": "^4.0.13",
     "turbolinks": "^5.2.0",
     "webpack-cli": "^3.3.11"
   },
