--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ services:
   - postgresql
 
 script:
-  - bundle exec rake db:migrate:reset db:setup RAILS_ENV=test --trace
+  - bundle exec rake db:migrate RAILS_ENV=test
+  - bundle exec rake db:seed
   - bundle exec rspec
