--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ services:
 
 script:
   - bundle exec rake db:migrate RAILS_ENV=test
-  - bundle exec rake db:seed
+  - bundle exec rake db:setup
   - bundle exec rspec
