--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ services:
 
 script:
   - bundle exec rake db:migrate:reset RAILS_ENV=test --trace
-  - bundle exec rake db:setup --trace
+  - bundle exec rake db:seed RAILS_ENV=test --trace
   - bundle exec rspec
