--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "4.4.1",
     "bootstrap-tagsinput": "^0.7.1",
     "expose-loader": "^0.7.5",
+    "gulp": "^4.0.2",
     "jquery": "^3.5.0",
+    "node-gyp": "^6.1.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "select2": "^4.0.13",
