--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp": "^4.0.2",
     "heroku": "^7.40.0",
     "jquery": "^3.5.0",
-    "node": "^14.0.0",
+    "node": "14.1.0",
     "node-gyp": "^6.1.0",
     "nodejs": "^0.0.0",
     "package.json": "^2.0.1",
